server/modules/highlight-items-widget/ui/src/index.scss
@import '../../../asset/ui/src/scss/settings';

body { overflow: hidden; }

::-webkit-scrollbar {
  display: none;  /* Safari and Chrome */
}

.pdl-highlight-widget {
  position: relative;
  display: flex;
  flex-direction: row;
  overflow: hidden;
  width: 100%;
  height: auto;
  scroll-behavior: smooth;
  margin-bottom: 18px;

  @media (min-width: map-get($breakpoints, 'sm')) {
    max-height: 500px;
  }
  @media (min-width: map-get($breakpoints, 'md')) {
    max-height: none;
    height: 767px;
    margin-bottom: 40px;
  }
}

.pdl-highlight-widget__items {
  display: block;
  position: relative;
  height: 100%;
  width: 100%;
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

.pdl-highlight-widget__item {
  display: none;
  flex-direction: column;
  gap: 0;
  height: auto;
  font-size: 30px;
  font-weight: 500;
  text-align: left;
  width: 100%;
  animation-name: fade;
  animation-duration: 0.5s;

  @media (min-width: map-get($breakpoints, 'sm')) {
    flex-direction: row;
  }

  @media (min-width: map-get($breakpoints, 'md')) {
    margin-bottom: 20px;
    flex-direction: row;
    height: 747px;
  }

  & > * {
    width: 100%;

    @media (min-width: map-get($breakpoints, 'sm')) {
      width: 50%;
    }
  }

  .pdl-highlight-widget__title {
    font-size: 63px;
    font-weight: 450;
    line-height: 58px;
    text-align: left;
    margin: 0;

    @media (min-width: map-get($breakpoints, 'md')) {
      font-size: 112px;
      line-height: 101px;
    }
  }

  .pdl-highlight-widget__image {
    display: block;
    min-width: 50%;
    height: 380px;
    mix-blend-mode: multiply;
    filter: grayscale(1);
    object-fit: cover;
    transform: translate3d(0,0,0); // for safari 18 to apply mix-blend-mode

    @media (min-width: map-get($breakpoints, 'sm')) {
      height: 100%;
    }
  }

  .pdl-highlight-widget__container {
    display: flex;
    flex-direction: column;
    width: 92%;
    height: calc(100% - 68px);
    margin: 16px 20px 52px;

    @media (min-width: map-get($breakpoints, 'sm')) {
      width: calc(50% - 35px);
      height: calc(100% - 35px);
      margin: 20px 20px 15px;
    }

    @media (min-width: map-get($breakpoints, 'md')) {
      width: calc(50% - 65px);
      height: calc(100% - 40px);
      margin: 20px 30px;
    }
  }

  .pdl-rich-text p {
    font-size: 18px;
    font-weight: 450;
    margin: 0;
    position: relative;
    top: -5px;
    left: 2px;
    letter-spacing: 0;

    @media (min-width: map-get($breakpoints, 'md')) {
      font-size: 32px;
      margin: 26px 0;
      left: 3px;
    }
  }

  .pdl-highlight-widget__description {
    font-size: 30px;
    font-weight: 500;
    text-align: left;
    position: relative;
    margin-top: 11px;

    @media (min-width: map-get($breakpoints, 'md')) {
      margin-top: 10px;
      width: auto;
    }
  }

  .pdl-highlight-widget__date {
    display: flex;
    align-items: center;
    position: relative;
    left: -5px;
    top: 7px;

    @media (min-width: map-get($breakpoints, 'md')) {
      top: -5px;
    }
    @media (min-width: map-get($breakpoints, 'sm')) {
      top: 5px;
    }

    svg {
      position: relative;
      height: 35px;

      @media (min-width: map-get($breakpoints, 'md')) {
        left: -6px;
        height: 66px;
      }
    }
  }

  .pdl-highlight-widget__year {
    color: white;
    font-size: 30px;
    font-weight: 450;
    margin-top: 10px;
    margin-bottom: 15px;

    &--hover {
      color: #7F7F7F;
    }

    @media (min-width: map-get($breakpoints, 'md')) {
      font-size: 47px;
      position: relative;
      left: -5px;
      top: 3px
    }
  }

  .pdl-highlight-widget__link {
    font-weight: 400;
    font-size: 19px;
    height: -moz-fit-content;
    height: fit-content;
    transition: all 0.3s;
    border-radius: 4px;
    padding: 10px;
    color: white;
    background-color: black;
    display: flex;
    width: -moz-fit-content;
    width: fit-content;
    gap: 9px;
    align-items: center;
    justify-content: center;
    margin-top: 22px;

    @media (min-width: map-get($breakpoints, 'md')) {
      gap: 16px;
      font-size: 26px;
      padding: 20px 24px;
      margin-top: 20px;
    }

    svg {
      width: 12px;

      @media (min-width: map-get($breakpoints, 'md')) {
        width: 24px;
      }
    }
  }

  .pdl-highlight-widget__slider {
    cursor: pointer;
    position: relative;
    margin-top: 20px;
    display: flex;
    gap: 8px;

    @media (min-width: map-get($breakpoints, 'md')) {
      position: absolute;
      bottom: 40px;
    }

    .slider__navlink {
      border: 1px solid black;
      background-color: transparent;
      border-radius: 2px;
      display: inline-block;
      height: 11px;
      width: 11px;

      &--active {
        background-color: black;
      }
    }
  }
}

